[gd_scene load_steps=15 format=3 uid="uid://61c78mr1sy6j"]

[ext_resource type="Script" uid="uid://c35k22q0vu3c5" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_item_bar_misc/smp_item_text_size_button.gd" id="1_ctg2p"]
[ext_resource type="PackedScene" path="res://addons/script_multi_plus/smp_scenes/smp_item/item_bar_button.tscn" id="2_swmba"]
[ext_resource type="Texture2D" uid="uid://dce4hnwy6rwjb" path="res://addons/script_multi_plus/sme_images/godot_PagePrevious.svg" id="3_p6ycy"]
[ext_resource type="Texture2D" uid="uid://dgbxhf6gacbqd" path="res://addons/script_multi_plus/sme_images/godot_PageNext.svg" id="4_pnbp1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ctg2p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swmba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p6ycy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pnbp1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfdg1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gyttm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p0qbb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xmw0c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cy7vr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8x20d"]

[node name="ItemTextSizeButton" type="Button"]
custom_minimum_size = Vector2(20, 20)
offset_right = 52.0
offset_bottom = 20.0
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_ctg2p")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_swmba")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p6ycy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pnbp1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tfdg1")
button_mask = 0
script = ExtResource("1_ctg2p")

[node name="M" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 0
offset_right = 52.0
offset_bottom = 20.0
theme_override_constants/margin_top = 2

[node name="H" type="HBoxContainer" parent="M"]
layout_mode = 2

[node name="ItemOpenArrowButton" parent="M/H" instance=ExtResource("2_swmba")]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_gyttm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p0qbb")
icon = ExtResource("3_p6ycy")
icon_alignment = 0

[node name="ItemLeftButton" parent="M/H" instance=ExtResource("2_swmba")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_gyttm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p0qbb")
icon = ExtResource("3_p6ycy")
icon_alignment = 0

[node name="ItemRightButton" parent="M/H" instance=ExtResource("2_swmba")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_xmw0c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cy7vr")
icon = ExtResource("4_pnbp1")
icon_alignment = 2

[node name="TextSizeRich" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 1.0
offset_right = 52.0
offset_bottom = 21.0
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8x20d")
bbcode_enabled = true
text = "14"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
